--- a/Frontend/public/locales/vn/translation.json
+++ b/Frontend/public/locales/vn/translation.json
@@ -1,5 +1,5 @@
 {
-  "explore": "Khám phá",
+  "home": "Trang chủ",
   "changeName": "Đổi ngôn ngữ",
   "darkMode": "Chế độ sáng/tối",
   "createNFT": "Tạo NFT",
@@ -41,7 +41,7 @@
     "careers": "Việc làm",
     "support": "Hỗ trợ",
     "footer-text1": "Thị trường NFTs tuyệt vời, sáng tạo kỹ thuật số đích thực và độc đáo.",
-    "footer-text2": "Bản quyền thuộc về Devera 2022. Cấm sao chép dưới mọi hình thức.",
+    "footer-text2": "Bản quyền thuộc về NFT Store 2022. Cấm sao chép dưới mọi hình thức.",
     "footer-text3": "Chính sách bảo mật",
     "footer-text4": "Điều khoản và điều kiện"
   },
